--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         《长大》<br>
         <input type="submit" value="提交">
         <input type="button" name="viewresult" value="查看">
-        <a href="http://www.w3.org/1999/xhtml">新浪-最喜爱电视剧评选</a> 
+        <a href="xiangmu4">新浪-最喜爱电视剧评选</a> 
         </td>
     </tr>
 </table>
