--- a/tupianqianming.html
+++ b/tupianqianming.html
@@ -30,8 +30,8 @@ body{
 
 <body>
 <div id="father">
-	<div id="block1"><img src="building4.jpg" border="0"></div>
-    <div id="block2">isaac photo</div>
-</div>
-</body>
+	<div id="block1"><img src="http://pic32.photophoto.cn/20140801/0042040320527101_b.jpg" width="320" height="220" border="0"></div>
+  <div id="block2">isaac photo</div>
+</div> 
+   </body>
 </html>
