--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
         <a href="xiangmu4.html">新浪-最喜爱电视剧评选</a> 
         </td>
     </tr>
+	 <a href="yupianqanming.html">图片签名</a>
+	 <a href="huanecanting.html">欢乐餐厅</a>
 </table>
         </form>
         </td></tr>
