--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
         <a href="xiangmu4.html">新浪-最喜爱电视剧评选</a> 
         </td>
 	<a href="yupianqanming.html">图片签名</a>
-	<a href="huanecanting.html">欢乐餐厅</a>
     </tr>
 </table>
         </form>
         </td></tr>
         </table>
-        
+     <a href="huanlecanting.html">欢乐餐厅</a>
+     <a href="tupianqianming.html">图片签名</a> 
 
 </body>
 </html>
