--- a/index.html
+++ b/index.html
@@ -72,5 +72,7 @@
         </table>
      <a href="huanlecanting.html">欢乐餐厅</a>
      <a href="tupianqianming.html">图片签名</a> 
+     <a href="xiangmuliu.html">项目六</a> 
+     <a href="kafeidian.html">咖啡店主页</a> 
 </body>
 </html>
