--- a/xiangmuliu.html
+++ b/xiangmuliu.html
@@ -162,7 +162,7 @@
             <a class="author1" href="#">freax</a>&gt;
         </li>
         <li>
-        	<a href="#">E 心 E 意&amp;</a>&nbsp;&lt;
+        	<a href="#">E 心 E 意&amp;36</a>&nbsp;&lt;
             <a class="author1" href="#">moonbow</a>&gt;
         </li>
     </ul>
