--- a/xiangmuliu.html
+++ b/xiangmuliu.html
@@ -99,13 +99,13 @@
 		text-align:left;
 		padding-left:14px
 		line-height:17px;
-		background:ur(arrow2.gif)
+		background:url(arrow2.gif)
 		no-repeat 7px 4px;
 		}
 	#recommendblog{
 		width:380px;
 		height:125px;
-		background:ur(recommendblog.jpg) no-repeat;
+		background:url(recommendblog.jpg) no-repeat;
 		background-color:#c4e6ff;
 		margin-bottom:10px;
 		position:absolute;
