--- a/xiangmuliu.html
+++ b/xiangmuliu.html
@@ -95,7 +95,7 @@
 		padding:10px 0px 0px 0px;
 		margin:0px;
 		}
-	#1hotblog li{
+	#lhotblog li{
 		text-align:left;
 		padding-left:14px
 		line-height:17px;
@@ -122,7 +122,7 @@
 </head>
 
 <body>
-<div id="1hotblog">
+<div id="lhotblog">
 	<h3 class="hotblog"><span>热门博客</span></h3>
     <ul>
     	<li>
