--- a/index.html
+++ b/index.html
@@ -74,5 +74,6 @@
      <a href="tupianqianming.html">图片签名</a> 
      <a href="xiangmu6.html">项目六</a> 
      <a href="kafeidian.html">咖啡店主页</a> 
+     <a href="xiangmu31.html">项目61</a> 
 </body>
 </html>
