--- a/index.html
+++ b/index.html
@@ -74,6 +74,6 @@
      <a href="tupianqianming.html">图片签名</a> 
      <a href="xiangmu6.html">项目六</a> 
      <a href="kafeidian.html">咖啡店主页</a> 
-     <a href="xiangmu61.html">项目61</a> 
+     <a href="buju.html">布局</a> 
 </body>
 </html>
