--- a/buju.html
+++ b/buju.html
@@ -71,9 +71,7 @@
 	height: 180px;
 	}
 #sm{
-	float:bottom;
-	background:#FFF;
-	height:15px;
+	margin:bottom;
 	}
 </style>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
